# ariac2021ws

./: .clang-format  .gitmodules  CPPLINT.cfg  README.md  join.bash
project/the_italian_job/tijbt/: CMakeLists.txt  bt_challenger.hpp  package.xml
project/the_italian_job/tijbt/include/tijbt/: BTExecutionResult.hpp  BTHandle.hpp  BehaviorTreeBuilder.hpp  BehaviorTreeBuilderInterface.hpp  BehaviorTreeManager.hpp  BehaviorTreeManagerBase.hpp  BehaviorTreeManagerInterface.hpp
project/the_italian_job/tijbt/src/: BTExecutionResult.cpp  BehaviorTreeBuilder.cpp  BehaviorTreeManager.cpp  BehaviorTreeManagerBase.cpp
project/the_italian_job/tijbt/src/loggers/: TIJBTLogger.cpp
project/the_italian_job/tijbt/src/modular_loggers/: ModularFileLogger.cpp  ModularMinitraceLogger.cpp  ModularStdCoutLogger.cpp  ModularTIJBTLogger.cpp
project/the_italian_job/tijbt/tests/: fast_tests_behavior_tree_builder.cpp  fast_tests_behavior_tree_builder_interface.cpp  fast_tests_behavior_tree_manager.cpp  fast_tests_bt_result.cpp  fast_tests_modular_file_logger.cpp  fast_tests_modular_minitrace_logger.cpp  fast_tests_modular_std_cout_logger.cpp  fast_tests_modular_tij_bt_logger.cpp
project/the_italian_job/tijchallenger/: CMakeLists.txt  package.xml
project/the_italian_job/tijchallenger/launch/: challenger.launch  gear.launch
project/the_italian_job/tijchallenger/src/: SceneConfigReader.cpp  TIJChallenger.cpp  infinite_tolerance_node.cpp  tijchallenger_node.cpp
project/the_italian_job/tijcore/: CMakeLists.txt  package.xml
project/the_italian_job/tijcore/atic/: OrderProcessingStrategy.cpp  PickAndPlaceAssemblyRobot.cpp  PickAndPlaceKittingRobot.cpp  PickAndPlaceRobotCommonImpl.cpp  PickAndTwistPartTask.hpp  SubmitAssemblyShipmentTask.cpp  SubmitAssemblyShipmentTask.hpp  SubmitKittingShipmentTask.cpp  SubmitKittingShipmentTask.hpp  TaskDispatcher.cpp  TaskDriver.cpp  TaskDriver.hpp  fast_tests_order_processing_strategy_interface.cpp  fast_tests_task_dispatcher.cpp
project/the_italian_job/tijcore/behavior/: behavior.xml
project/the_italian_job/tijcore/src/: AgvId.cpp  AgvModelContainer.cpp  AssemblyStationModelContainer.cpp  BTRobotTaskFactory.cpp  BehaviorTreeTransitionLogger.cpp  BinId.cpp  BinModelContainer.cpp  ConveyorBeltModelContainer.cpp  CuboidVolume.cpp  GripperTypeId.cpp  ManagedLocus.cpp  ModelContainerInterface.cpp  ModelPerceptionMixer.cpp  ModelPerceptionSpatialFilter.cpp  MovableTrayId.cpp  MovableTrayTypeId.cpp  OrderId.cpp  OrderProcessingStrategy.cpp  PartColorId.cpp  PartId.cpp  PartTypeId.cpp  PickAndPlaceTask.cpp  PickAndTwistPartTask.cpp  RemoveBrokenPartTask.cpp  ResourceHandle.cpp  ResourceManager.cpp  RobotTaskFactory.cpp  RobotTaskGroupRunner.cpp  RobotTaskOutcome.cpp  SpatialMutualExclusionManager.cpp  StaticFrameTransformer.cpp  StationId.cpp  SubmitAssemblyShipmentTask.cpp  SubmitKittingShipmentTask.cpp  SurfaceManager.cpp  TableModelContainer.cpp  TaskDriver.cpp  TaskMaster.cpp  WorkRegionId.cpp  btnodes.cpp  (+1 more)
project/the_italian_job/tijcore/templates/: template.cpp  template.hpp
project/the_italian_job/tijcore/tests/: disabled_fast_tests_order_processing_strategy.cpp  fast_tests_agv_id.cpp  fast_tests_bin_id.cpp  fast_tests_blind_volume_tracker_interface.cpp  fast_tests_bt_robot_task_factory_basic_tree_construction.cpp  fast_tests_cuboid_volume.cpp  fast_tests_gripper_type_id.cpp  fast_tests_isometry.cpp  fast_tests_logger.cpp  fast_tests_managed_locus.cpp  fast_tests_matrix3.cpp  fast_tests_model_container_interface.cpp  fast_tests_model_perception_mixer.cpp  fast_tests_model_perception_spatial_filter.cpp  fast_tests_movable_tray_type_id.cpp  fast_tests_order_id.cpp  fast_tests_order_processing_strategy_factory_interface.cpp  fast_tests_order_processing_strategy_interface.cpp  fast_tests_part_color_id.cpp  fast_tests_part_id.cpp  fast_tests_part_type_id.cpp  fast_tests_pick_and_place_robot_interface.cpp  fast_tests_plain_old_data.cpp  fast_tests_position.cpp  fast_tests_process_managements_interface.cpp  fast_tests_qualified_item.cpp  fast_tests_resource_handle.cpp  fast_tests_resource_manager.cpp  fast_tests_resource_manager_interface.cpp  fast_tests_robot_actuators_interface.cpp  fast_tests_robot_task_group_runner_interface.cpp  fast_tests_robot_task_interface.cpp  fast_tests_robot_task_outcome.cpp  fast_tests_rotation.cpp  fast_tests_spatial_mutual_exclusion_manager.cpp  fast_tests_static_frame_transformer.cpp  fast_tests_station_id.cpp  fast_tests_surface_manager.cpp  fast_tests_task_dispatcher.cpp  fast_tests_task_dispatcher_interface.cpp  (+8 more)
project/the_italian_job/tijlogger/: CMakeLists.txt  package.xml
project/the_italian_job/tijlogger/tests/: fast_tests_logger.cpp  runner.cpp
project/the_italian_job/tijmath/: CMakeLists.txt  package.xml
project/the_italian_job/tijmath/src/: FrameId.cpp  Isometry.cpp  Matrix3.cpp  Pose3.cpp  Position.cpp  Quaternion.cpp  RelativePose3.cpp  Rotation.cpp  Vector3.cpp  math_utilities.cpp
project/the_italian_job/tijmath/tests/: fast_tests_isometry.cpp  fast_tests_matrix3.cpp  fast_tests_position.cpp  fast_tests_rotation.cpp  fast_tests_vector3.cpp
project/the_italian_job/tijros/: CMakeLists.txt  package.xml
project/the_italian_job/tijros/src/: ConveyorBeltManager.cpp  HumanMonitorService.cpp  LogicalCameraModelPerception.cpp  PickAndPlaceAssemblyRobot.cpp  PickAndPlaceKittingRobot.cpp  PickAndPlaceRobotCommonImpl.cpp  PickAndPlaceRobotMovements.cpp  QualitySensorModelPerception.cpp  ROSFrameTransformer.cpp  ROSProcessManagement.cpp  ROSRobotActuators.cpp  ROSRobotJointDirectControl.cpp
project/the_italian_job/tijros/utils/: fixformat.py
project/the_italian_job/tijutils/: CMakeLists.txt  package.xml
project/the_italian_job/tijutils/config/: gantry_rviz_config.rviz  kitting_rviz_config.rviz
project/the_italian_job/tijutils/launch/: rviz_control_gantry.launch  rviz_control_kitting.launch
project/the_italian_job/tijutils/src/: Timer.cpp  UniqueId.cpp  string_utils.cpp
project/the_italian_job/tijutils/tests/: fast_tests_unique_id.cpp  fast_tests_utils_string.cpp  runner.cpp  slow_tests_utils_timer.cpp
(+650 files in other folders)
