<?xml version="1.0"?>
<package format="2">
  <name>tijbt</name>
  <version>0.0.0</version>
  <description>TheItalianJob's ARIAC competition challenger bt toolbox package</description>
  <author email="glpuga@gmail.com">Gerardo Puga</author>
  <maintainer email="glpuga@gmail.com">Gerardo Puga</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>behaviortree_cpp_v3</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rostest</depend>
  <depend>tijlogger</depend>

  <depend>python-catkin-lint</depend>

</package>
