<?xml version="1.0"?>
<package format="2">
  <name>tijchallenger</name>
  <version>3.0.6</version>
  <description>Ekumen's official ARIAC 2021 competition challenger</description>
  <author email="glpuga@gmail.com">Gerardo Puga</author>
  <maintainer email="glpuga@gmail.com">Gerardo Puga</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <build_depend>tijcore</build_depend>
  <build_export_depend>tijcore</build_export_depend>
  <exec_depend>tijcore</exec_depend>

  <build_depend>tijros</build_depend>
  <build_export_depend>tijros</build_export_depend>
  <exec_depend>tijros</exec_depend>

</package>
