<?xml version="1.0"?>
<package format="2">
  <name>tijchallenger</name>
  <version>3.0.6</version>
  <description>TheItalianJob's official ARIAC 2021 competition challenger node</description>
  <author email="glpuga@gmail.com">Gerardo Puga</author>
  <maintainer email="glpuga@gmail.com">Gerardo Puga</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>control_msgs</depend>
  <depend>custom_gantry_moveit_config</depend>
  <depend>custom_kitting_moveit_config</depend>
  <depend>nist_gear</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rostest</depend>
  <depend>tijmath</depend>
  <depend>tijros</depend>
  <depend>tf</depend>

  <depend>python-catkin-lint</depend>

</package>
