<?xml version="1.0"?>
<package format="2">
  <name>tijcore</name>
  <version>0.0.0</version>
  <description>ARIAC competition ROS-agnostic core layer</description>
  <author email="glpuga@gmail.com">Gerardo Puga</author>
  <maintainer email="glpuga@gmail.com">Gerardo Puga</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>behaviortree_cpp_v3</depend>
  <depend>behavior_tree_extras</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>rostest</depend>
  <depend>tijlogger</depend>
  <depend>tijmath</depend>
  <depend>tijutils</depend>

  <depend>python-catkin-lint</depend>

</package>
