<?xml version="1.0"?>
<package format="2">
  <name>tijmath</name>
  <version>0.0.0</version>
  <description>ARIAC competition reusable basic 2D/2D algebra library</description>
  <author email="glpuga@gmail.com">Gerardo Puga</author>
  <maintainer email="glpuga@gmail.com">Gerardo Puga</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>roslint</depend>
  <depend>eigen</depend>
  <depend>rostest</depend>
  <depend>tijlogger</depend>

  <depend>python-catkin-lint</depend>

</package>
