<?xml version="1.0"?>
<package format="2">
  <name>tijutils</name>
  <version>0.0.0</version>
  <description>Utils, launchers and other stuff that does not really fit anywhere</description>

  <maintainer email="glpuga@gmail.com">Gerardo Puga</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslint</depend>
  <depend>custom_gantry_moveit_config</depend>
  <depend>custom_kitting_moveit_config</depend>

  <depend>python-catkin-lint</depend>

</package>
